--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sivasakthi Aanmeega Yatra</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
+
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -119,30 +122,36 @@
     <section id="gallery" class="section gallery">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Gallery</h2>
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
-                    <div class="gallery-item">
-                        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="200" height="200" fill="#f37021" />
-                            <circle cx="100" cy="100" r="80" fill="#fff" opacity="0.3" />
-                        </svg>
-                    </div>
+            <div class="gallery-slider">
+                <div>
+                    <a href="./img/service-h-1.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 1">
+                        <img src="./img/service-h-1.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 1">
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
-                    <div class="gallery-item">
-                        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="200" height="200" fill="#ff8c42" />
-                            <circle cx="100" cy="100" r="80" fill="#fff" opacity="0.3" />
-                        </svg>
-                    </div>
+                <div>
+                    <a href="./img/service-h-2.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 2">
+                        <img src="./img/service-h-2.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 2">
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
-                    <div class="gallery-item">
-                        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="200" height="200" fill="#f37021" />
-                            <circle cx="100" cy="100" r="80" fill="#fff" opacity="0.3" />
-                        </svg>
-                    </div>
+                <div>
+                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
+                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
+                    </a>
+                </div>
+                <div>
+                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
+                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
+                    </a>
+                </div>
+                <div>
+                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
+                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
+                    </a>
+                </div>
+                <div>
+                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
+                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
+                    </a>
                 </div>
             </div>
         </div>
@@ -179,13 +188,13 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section contact">
+    <section id="contact" class="section contact bg-white">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Contact Us</h2>
             <div class="row g-4">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <div class="d-flex justify-content-center bg-white p-3 mb-3 rounded">
-                        <img src="./img/say.png" class="img-fluid" alt="">
+                    <div class="d-flex justify-content-center bg-dark p-3 mb-3 rounded">
+                        <img src="./img/say-wh.png" class="img-fluid" alt="">
                     </div>
                     <div class="contact-info">
                         <div class="contact-item">
@@ -315,6 +324,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+
     <script src="./script.js"></script>
 </body>
 
