--- a/index.html
+++ b/index.html
@@ -118,45 +118,6 @@
         </div>
     </section>
 
-    <!-- Gallery Section -->
-    <section id="gallery" class="section gallery">
-        <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Gallery</h2>
-            <div class="gallery-slider">
-                <div>
-                    <a href="./img/service-h-1.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 1">
-                        <img src="./img/service-h-1.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 1">
-                    </a>
-                </div>
-                <div>
-                    <a href="./img/service-h-2.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 2">
-                        <img src="./img/service-h-2.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 2">
-                    </a>
-                </div>
-                <div>
-                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
-                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
-                    </a>
-                </div>
-                <div>
-                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
-                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
-                    </a>
-                </div>
-                <div>
-                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
-                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
-                    </a>
-                </div>
-                <div>
-                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
-                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Why Choose Us Section -->
     <section id="why-choose-us" class="section why-choose-us">
         <div class="container">
@@ -182,6 +143,45 @@
                         <h3>Comfortable Travel</h3>
                         <p>Modern, comfortable buses with all amenities for a pleasant spiritual journey.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section id="gallery" class="section gallery">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">Gallery</h2>
+            <div class="gallery-slider">
+                <div class="img-slider">
+                    <a href="./img/service-h-1.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 1">
+                        <img src="./img/service-h-1.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 1">
+                    </a>
+                </div>
+                <div class="img-slider">
+                    <a href="./img/service-h-2.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 2">
+                        <img src="./img/service-h-2.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 2">
+                    </a>
+                </div>
+                <div class="img-slider">
+                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
+                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
+                    </a>
+                </div>
+                <div class="img-slider">
+                    <a href="./img/service-h-1.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 1">
+                        <img src="./img/service-h-1.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 1">
+                    </a>
+                </div>
+                <div class="img-slider">
+                    <a href="./img/service-h-2.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 2">
+                        <img src="./img/service-h-2.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 2">
+                    </a>
+                </div>
+                <div class="img-slider">
+                    <a href="./img/service-h-3.jpg" data-fancybox="gallery" data-caption="Spiritual Journey 3">
+                        <img src="./img/service-h-3.jpg" class="img-fluid gallery-item" alt="Spiritual Journey 3">
+                    </a>
                 </div>
             </div>
         </div>
