--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sivasakthi Aanmeega Yatra</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -14,9 +15,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
 
     <link rel="stylesheet" href="./style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Tamil:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+
 </head>
 
 <body>
+
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
@@ -29,9 +39,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contact.html">Register</a></li>
                 </ul>
             </div>
         </div>
@@ -43,7 +53,7 @@
             <div class="hero-content text-center" data-aos="fade-up">
                 <h1>Sivasakthi Aanmeega Yatra</h1>
                 <p class="subtitle">Your Spiritual Journey Begins Here</p>
-                <a href="#contact" class="cta-btn">Book Your Yatra</a>
+                <a href="./contact.html" class="cta-btn">Book Your Yatra</a>
             </div>
         </div>
     </section>
@@ -55,7 +65,9 @@
             <div class="row align-items-center">
                 <div class="col-lg-6" data-aos="fade-right">
                     <p>Welcome to Sivasakthi Aanmeega Yatra, your trusted spiritual travel companion. We are part of
-                        Heal Herbals, dedicated to providing transformative spiritual journeys that connect you with
+                        S-Grade Tour Operators, dedicated to providing transformative spiritual journeys that connect
+                        you
+                        with
                         divine energy and inner peace.</p>
                     <p>Our carefully curated yatra experiences are designed to help devotees find solutions to life's
                         challenges through spiritual guidance and divine blessings. With years of experience in
@@ -66,7 +78,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="about-image">
-                        <img src="./img/about-img.jpg" class="img-fluid" alt="">
+                        <video src="./img/about.mp4" autoplay loop playsinline controls></video>
                     </div>
                 </div>
             </div>
@@ -78,39 +90,39 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Our Services</h2>
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-lg-4 col-md-12" data-aos="fade-up" data-aos-delay="100">
                     <div class="service-card">
                         <div class="card-header">
                             <img src="./img/service-h-1.jpg" class="img-fluid" alt="Blessings for Parenthood">
-                            <h3>Blessings for Parenthood</h3>
+                            <h3>குழந்தை பாக்கியம் பெற ஆன்மீக யாத்திரை</h3>
                         </div>
                         <div class="card-body">
-                            <p>Experience divine grace through sacred temple pilgrimages and spiritual rituals, seeking the
-                                gift of a child with faith and devotion.</p>
+                            <p>திருமணம் ஆகி நீண்ட நாட்களாக குழந்தை பாக்கியம் கிடைக்காமல் கஷ்டப்பட்டு கொண்டிருக்கும்
+                                நபர்களுக்காக, ஆன்மீக யாத்திரை.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-lg-4 col-md-12" data-aos="fade-up" data-aos-delay="200">
                     <div class="service-card">
                         <div class="card-header">
                             <img src="./img/service-h-2.jpg" class="img-fluid" alt="Marriage Obstacle Removal">
-                            <h3>Marriage Obstacle Removal</h3>
+                            <h3>திருமணத்தடை நீங்க ஆன்மீக யாத்திரை</h3>
                         </div>
                         <div class="card-body">
-                            <p>Embark on a spiritual journey to dissolve hurdles in marriage and receive blessings for a
-                                harmonious and fulfilling partnership.</p>
+                            <p>திருமணம் வயது தாண்டியும் திருமணம் ஆகாமல், திருமணத்தில் தடைகள் ஏற்பட்டு கஷ்டப்பட்டுக்
+                                கொண்டிருக்கும் நபர்களுக்காக, ஆன்மீக
+                                யாத்திரை.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-4 col-md-12" data-aos="fade-up" data-aos-delay="300">
                     <div class="service-card">
                         <div class="card-header">
                             <img src="./img/service-h-3.jpg" class="img-fluid" alt="Business Success">
-                            <h3>Business Success</h3>
+                            <h3>வெற்றிகள் கிடைக்க ஆன்மீக யாத்திரை</h3>
                         </div>
                         <div class="card-body">
-                            <p>Seek divine intervention to overcome challenges in profession and business, inviting
-                                prosperity, growth, and lasting success.</p>
+                            <p>தொழிலில் வெற்றி பெற, தொழில் போட்டி விலக, அரசு வேலை கிடைக்க ஆன்மீக யாத்திரை.</p>
                         </div>
                     </div>
                 </div>
@@ -123,21 +135,21 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Why Choose Us</h2>
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-lg-4 col-md-12" data-aos="fade-up" data-aos-delay="100">
                     <div class="feature-box">
                         <div class="feature-icon"><i class="bi bi-shield-check"></i></div>
                         <h3>Trusted S-Grade Tour Operator</h3>
                         <p>Certified and licensed tour operator with years of experience in spiritual tourism.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-lg-4 col-md-12" data-aos="fade-up" data-aos-delay="200">
                     <div class="feature-box">
                         <div class="feature-icon"><i class="bi bi-lamp"></i></div>
                         <h3>Spiritual Guidance</h3>
                         <p>Expert spiritual guides to help you connect with divine energy and find inner peace.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-4 col-md-12" data-aos="fade-up" data-aos-delay="300">
                     <div class="feature-box">
                         <div class="feature-icon"><i class="bi bi-bus-front"></i></div>
                         <h3>Comfortable Travel</h3>
@@ -201,28 +213,33 @@
                             <i class="bi bi-envelope-fill"></i>
                             <div>
                                 <h4>Email</h4>
-                                <p>info@sivasakthi-yatra.com</p>
+                                <p><a
+                                        href="mailto:sivasakthiaanmeegayatra2024@gmail.com">sivasakthiaanmeegayatra2024@gmail.com</a>
+                                </p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="bi bi-telephone-fill"></i>
                             <div>
                                 <h4>Phone</h4>
-                                <p>+91 98765 43210</p>
+                                <p><a href="tel:9442511961">+91 94425 11961</a></p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="bi bi-geo-alt-fill"></i>
                             <div>
                                 <h4>Address</h4>
-                                <p>123 Temple Street, Spiritual District, Chennai, Tamil Nadu 600001</p>
+                                <p>Shop no 7, Ajees complex, Pazhaiyar road, Puthur Sirkali (tk), Mayiladuthurai (dt),
+                                    609108.</p>
                             </div>
                         </div>
                     </div>
                     <div class="social-links">
                         <a href="https://www.facebook.com/share/1CUAoNiTTA/" class="bi bi-facebook"></a>
-                        <a href="https://youtube.com/@sivasakthiaanmeegayatra2.0?si=3GzN2MOanka4nNrA" class="bi bi-youtube"></a>
-                        <a href="https://www.instagram.com/sivasakthiaanmeega?igsh=MXVxeTFrZnR1cHBhMA==" class="bi bi-instagram"></a>
+                        <a href="https://youtube.com/@sivasakthiaanmeegayatra2.0?si=3GzN2MOanka4nNrA"
+                            class="bi bi-youtube"></a>
+                        <a href="https://www.instagram.com/sivasakthiaanmeega?igsh=MXVxeTFrZnR1cHBhMA=="
+                            class="bi bi-instagram"></a>
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
@@ -236,8 +253,8 @@
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Your Email"
-                                    required>
+                                <input type="email" class="form-control" id="email" name="email"
+                                    placeholder="Your Email" required>
                             </div>
                             <div class="mb-3">
                                 <label for="phone" class="form-label">Phone</label>
@@ -269,32 +286,34 @@
                                 <img src="./img/say-wh.png" class="img-fluid logo-say w-100" alt="">
                             </a>
                         </div>
-                        <p>Your trusted spiritual travel companion, offering transformative journeys that connect you with
+                        <p>Your trusted spiritual travel companion, offering transformative journeys that connect you
+                            with
                             divine energy and inner peace.</p>
                     </div>
                     <div class="social-links" data-aos="fade-up" data-aos-delay="300">
                         <a href="https://www.facebook.com/share/1CUAoNiTTA/" class="bi bi-facebook"></a>
-                        <a href="https://youtube.com/@sivasakthiaanmeegayatra2.0?si=3GzN2MOanka4nNrA" class="bi bi-youtube"></a>
-                        <a href="https://www.instagram.com/sivasakthiaanmeega?igsh=MXVxeTFrZnR1cHBhMA==" class="bi bi-instagram"></a>
+                        <a href="https://youtube.com/@sivasakthiaanmeegayatra2.0?si=3GzN2MOanka4nNrA"
+                            class="bi bi-youtube"></a>
+                        <a href="https://www.instagram.com/sivasakthiaanmeega?igsh=MXVxeTFrZnR1cHBhMA=="
+                            class="bi bi-instagram"></a>
                     </div>
                 </div>
                 <!-- Navigation Links -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="footer-title" data-aos="fade-up" data-aos-delay="100">Quick Links</h4>
                     <ul class="footer-links" data-aos="fade-up" data-aos-delay="150">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#gallery">Gallery</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./services.html">Services</a></li>
+                        <li><a href="./contact.html">Register</a></li>
                     </ul>
                 </div>
                 <!-- Services List -->
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="footer-title" data-aos="fade-up" data-aos-delay="100">Quick Links</h4>
+                    <h4 class="footer-title" data-aos="fade-up" data-aos-delay="100">Services</h4>
                     <ul class="footer-links" data-aos="fade-up" data-aos-delay="150">
-                        <li><a href="#home">Blessings for Parenthood</a></li>
-                        <li><a href="#services">Marriage Obstacle Removal</a></li>
-                        <li><a href="#gallery">Business Success</a></li>
+                        <li><a href="./services.html#service-1">குழந்தை பாக்கியம் பெற ஆன்மீக யாத்திரை</a></li>
+                        <li><a href="./services.html#service-2">திருமணத்தடை நீங்க ஆன்மீக யாத்திரை</a></li>
+                        <li><a href="./services.html#service-3">வெற்றிகள் கிடைக்க ஆன்மீக யாத்திரை</a></li>
                     </ul>
                 </div>
                 <!-- Contact Info -->
@@ -311,7 +330,8 @@
                         </div>
                         <div class="contact-item">
                             <i class="bi bi-geo-alt-fill"></i>
-                            <p>Shop no 7, Ajees complex, Pazhaiyar road, Puthur Sirkali (tk), Mayiladuthurai (dt), 609108</p>
+                            <p>Shop no 7, Ajees complex, Pazhaiyar road, Puthur Sirkali (tk), Mayiladuthurai (dt),
+                                609108</p>
                         </div>
                     </div>
                 </div>
@@ -322,6 +342,16 @@
         </div>
     </footer>
 
+    <!-- Translator container -->
+    <!-- <div id="google_translate_element_container" class="floating-translator-container skiptranslate">
+        <div id="google_translate_element"></div>
+    </div> -->
+
+    <!-- Load Google Translate (must be AFTER the init above) -->
+    <!-- <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -329,6 +359,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 
     <script src="./script.js"></script>
+
+
 </body>
 
 </html>
